--- a/app/app.html
+++ b/app/app.html
@@ -1,2 +1,11 @@
 
+<ion-menu [content]="mycontent" type="push" #leftmenu id="left">
+
+  <ion-content>
+    <ion-list>
+      <button>Close</button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
 <ion-nav [root]="rootPage" #mycontent></ion-nav>
