--- a/app/app.html
+++ b/app/app.html
@@ -1,5 +1,5 @@
 
-<ion-menu [content]="mycontent" type="push" #leftmenu id="left">
+<ion-menu [content]="mycontent" type="push" #leftmenu id="left" style="width: 80px">
 
   <ion-content>
     <ion-list>
